--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
-name = "maixduino-base"
+name = "{{crate-name}}"
 version = "0.1.0"
+authors = ["{{authors}}"]
 edition = "2021"
 
 [dependencies]
